product_docs/docs/pem/10/pem_rest_api/v17/probe-data.mdx
---
navTitle: Probe data
title: 'EDB Postgres Enterprise Manager REST APIs v17.0: Probe data'

---



## `get__probe_data_agent_{agent_id}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v17/probe/data/agent/{agent_id}/{probe_id} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v17/probe/data/agent/{agent_id}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v17/probe/data/agent/{agent_id}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/data/agent/{agent_id}/{probe_id}`

Gets `Probe data` for agent.

<span id="get__probe_data_agent_{agent_id}_{probe_id}-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description                              |
| ------------ | ------ | ------- | -------- | ---------------------------------------- |
| agent_id     | path   | integer | true     | Agent ID                                 |
| probe_id     | path   | integer | true     | Probe ID for which data will be returned |
| X-Auth-Token | header | string  | true     | Token of authorization                   |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_data_agent_{agent_id}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_data_agent_{agent_id}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_data_server_{server_id}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/{probe_id} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/data/server/{server_id}/{probe_id}`

Gets `Probe data` for server.

<span id="get__probe_data_server_{server_id}_{probe_id}-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description                              |
| ------------ | ------ | ------- | -------- | ---------------------------------------- |
| server_id    | path   | integer | true     | Server ID                                |
| probe_id     | path   | integer | true     | Probe ID for which data will be returned |
| X-Auth-Token | header | string  | true     | Token of authorization                   |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_data_server_{server_id}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_data_server_{server_id}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_data_server_{server_id}_database_{database_name}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/{probe_id} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/data/server/{server_id}/database/{database_name}/{probe_id}`

Gets `Probe data` for database.

<span id="get__probe_data_server_{server_id}_database_{database_name}_{probe_id}-parameters"></span>

### Parameters



| Name          | In     | Type    | Required | Description                              |
| ------------- | ------ | ------- | -------- | ---------------------------------------- |
| server_id     | path   | integer | true     | Server ID                                |
| database_name | path   | string  | true     | Database name                            |
| probe_id      | path   | integer | true     | Probe ID for which data will be returned |
| X-Auth-Token  | header | string  | true     | Token of authorization                   |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_data_server_{server_id}_database_{database_name}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_data_server_{server_id}_database_{database_name}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/{probe_id} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/{probe_id}`

Gets `Probe data` for schema.

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_{probe_id}-parameters"></span>

### Parameters



| Name          | In     | Type    | Required | Description                              |
| ------------- | ------ | ------- | -------- | ---------------------------------------- |
| server_id     | path   | integer | true     | Server ID                                |
| database_name | path   | string  | true     | Database name                            |
| schema_name   | path   | string  | true     | Schema name                              |
| probe_id      | path   | integer | true     | Probe ID for which data will be returned |
| X-Auth-Token  | header | string  | true     | Token of authorization                   |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_table_{table_name}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/table/{table_name}/{probe_id} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/table/{table_name}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/table/{table_name}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/table/{table_name}/{probe_id}`

Gets `Probe data` for table.

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_table_{table_name}_{probe_id}-parameters"></span>

### Parameters



| Name          | In     | Type    | Required | Description                              |
| ------------- | ------ | ------- | -------- | ---------------------------------------- |
| server_id     | path   | integer | true     | Server ID                                |
| database_name | path   | string  | true     | Database name                            |
| schema_name   | path   | string  | true     | Schema name                              |
| table_name    | path   | string  | true     | Table name                               |
| probe_id      | path   | integer | true     | Probe ID for which data will be returned |
| X-Auth-Token  | header | string  | true     | Token of authorization                   |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_table_{table_name}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_table_{table_name}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_index_{index_name}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/index/{index_name}/{probe_id} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/index/{index_name}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/index/{index_name}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/index/{index_name}/{probe_id}`

Gets `Probe data` for index.

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_index_{index_name}_{probe_id}-parameters"></span>

### Parameters



| Name          | In     | Type    | Required | Description                              |
| ------------- | ------ | ------- | -------- | ---------------------------------------- |
| server_id     | path   | integer | true     | Server ID                                |
| database_name | path   | string  | true     | Database name                            |
| schema_name   | path   | string  | true     | Schema name                              |
| index_name    | path   | string  | true     | Index name                               |
| probe_id      | path   | integer | true     | Probe ID for which data will be returned |
| X-Auth-Token  | header | string  | true     | Token of authorization                   |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_index_{index_name}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_index_{index_name}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_sequence_{sequence_name}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/sequence/{sequence_name}/{probe_id} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/sequence/{sequence_name}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/sequence/{sequence_name}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/sequence/{sequence_name}/{probe_id}`

Gets `Probe data` for sequence.

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_sequence_{sequence_name}_{probe_id}-parameters"></span>

### Parameters



| Name          | In     | Type    | Required | Description                              |
| ------------- | ------ | ------- | -------- | ---------------------------------------- |
| server_id     | path   | integer | true     | Server ID                                |
| database_name | path   | string  | true     | Database name                            |
| schema_name   | path   | string  | true     | Schema name                              |
| sequence_name | path   | string  | true     | Sequence name                            |
| probe_id      | path   | integer | true     | Probe ID for which data will be returned |
| X-Auth-Token  | header | string  | true     | Token of authorization                   |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_sequence_{sequence_name}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_sequence_{sequence_name}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_view_{view_name}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/view/{view_name}/{probe_id} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/view/{view_name}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/view/{view_name}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/view/{view_name}/{probe_id}`

Gets `Probe data` for view.

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_view_{view_name}_{probe_id}-parameters"></span>

### Parameters



| Name          | In     | Type    | Required | Description                              |
| ------------- | ------ | ------- | -------- | ---------------------------------------- |
| server_id     | path   | integer | true     | Server ID                                |
| database_name | path   | string  | true     | Database name                            |
| schema_name   | path   | string  | true     | Schema name                              |
| view_name     | path   | string  | true     | View name                                |
| probe_id      | path   | integer | true     | Probe ID for which data will be returned |
| X-Auth-Token  | header | string  | true     | Token of authorization                   |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_view_{view_name}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_view_{view_name}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_function_{function_name}_{probe_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/function/{function_name}/{probe_id} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/function/{function_name}/{probe_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v17/probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/function/{function_name}/{probe_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/data/server/{server_id}/database/{database_name}/schema/{schema_name}/function/{function_name}/{probe_id}`

Gets `Probe data` for function.

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_function_{function_name}_{probe_id}-parameters"></span>

### Parameters



| Name          | In     | Type    | Required | Description                              |
| ------------- | ------ | ------- | -------- | ---------------------------------------- |
| server_id     | path   | integer | true     | Server ID                                |
| database_name | path   | string  | true     | Database name                            |
| schema_name   | path   | string  | true     | Schema name                              |
| function_name | path   | string  | true     | Function name                            |
| probe_id      | path   | integer | true     | Probe ID for which data will be returned |
| X-Auth-Token  | header | string  | true     | Token of authorization                   |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_function_{function_name}_{probe_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema |
| ------ | ------------------------------------------------------- | ------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | Inline |

<span id="get__probe_data_server_{server_id}_database_{database_name}_schema_{schema_name}_function_{function_name}_{probe_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_{probe_id}_data_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v17/probe/{probe_id}/data/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v17/probe/{probe_id}/data/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v17/probe/{probe_id}/data/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/{probe_id}/data/`

Returns current probe data from the pemdata schema for the given probe ID across all accessible servers/agents.

RBAC: server_id is validated against pem.server RLS (team visibility). For agent-level probes the server_id parameter is not applicable.

<span id="get__probe_{probe_id}_data_-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description                                                    |
| ------------ | ------ | ------- | -------- | -------------------------------------------------------------- |
| probe_id     | path   | integer | true     | Numeric probe ID                                               |
| server_id    | query  | integer | false    | Filter by server ID (server-level probes only). Enforces RBAC. |
| offset       | query  | integer | false    | Rows to skip. Omit for no offset.                              |
| pageSize     | query  | integer | false    | Maximum rows to return (1-1000). Omit to return all.           |
| X-Auth-Token | header | string  | true     | Token of authorization                                         |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_{probe_id}_data_-responses"></span>

### Responses



| Status | Meaning                                                                    | Description                              | Schema |
| ------ | -------------------------------------------------------------------------- | ---------------------------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1)                    | Successful response                      | Inline |
| 400    | [Bad Request](https://tools.ietf.org/html/rfc7231#section-6.5.1)           | Bad request — invalid parameter          | None   |
| 404    | [Not Found](https://tools.ietf.org/html/rfc7231#section-6.5.4)             | Probe not found or server not accessible | None   |
| 500    | [Internal Server Error](https://tools.ietf.org/html/rfc7231#section-6.6.1) | Internal server error                    | None   |

<span id="get__probe_{probe_id}_data_-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__probe_{internal_name}_data_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v17/probe/{internal_name}/data/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v17/probe/{internal_name}/data/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v17/probe/{internal_name}/data/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /probe/{internal_name}/data/`

Returns current probe data from the pemdata schema for the given probe internal_name.

Equivalent to /probe/{probe_id}/data/ but addressed by internal_name (e.g. server_info, cpu_usage).

<span id="get__probe_{internal_name}_data_-parameters"></span>

### Parameters



| Name          | In     | Type    | Required | Description                                                    |
| ------------- | ------ | ------- | -------- | -------------------------------------------------------------- |
| internal_name | path   | string  | true     | Probe internal name (e.g. server_info, cpu_usage)              |
| server_id     | query  | integer | false    | Filter by server ID (server-level probes only). Enforces RBAC. |
| offset        | query  | integer | false    | Rows to skip. Omit for no offset.                              |
| pageSize      | query  | integer | false    | Maximum rows to return (1-1000). Omit to return all.           |
| X-Auth-Token  | header | string  | true     | Token of authorization                                         |

**Example responses**

<Details summary="200 Response">

```json
[
  {}
]
```

</Details>

<span id="get__probe_{internal_name}_data_-responses"></span>

### Responses



| Status | Meaning                                                                    | Description                              | Schema |
| ------ | -------------------------------------------------------------------------- | ---------------------------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1)                    | Successful response                      | Inline |
| 400    | [Bad Request](https://tools.ietf.org/html/rfc7231#section-6.5.1)           | Bad request — invalid parameter          | None   |
| 404    | [Not Found](https://tools.ietf.org/html/rfc7231#section-6.5.4)             | Probe not found or server not accessible | None   |
| 500    | [Internal Server Error](https://tools.ietf.org/html/rfc7231#section-6.6.1) | Internal server error                    | None   |

<span id="get__probe_{internal_name}_data_-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




<span id="edb-postgres-enterprise-manager-rest-apis-probe-history"></span>
